# ChangeLog for dev-java/junit
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.55 2010/01/03 20:52:12 fauli Exp $

  03 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  junit-3.8.2-r1.ebuild, junit-4.6.ebuild:
  Transfer Prefix keywords

  08 Oct 2009; Vlastimil Babka <caster@gentoo.org> -junit-3.8.1-r3.ebuild,
  -junit-4.4-r1.ebuild, -junit-4.5.ebuild:
  Remove old.

  19 Jul 2009; nixnut <nixnut@gentoo.org> junit-4.6.ebuild:
  ppc stable #275179

  04 Jul 2009; Brent Baude <ranger@gentoo.org> junit-4.6.ebuild:
  Marking junit-4.6 ppc64 for bug 275179

  29 Jun 2009; Markus Meier <maekke@gentoo.org> junit-4.6.ebuild:
  amd64/x86 stable, bug #275179

*junit-4.6 (23 May 2009)

  23 May 2009; Serkan Kaba <serkan@gentoo.org> +junit-4.6.ebuild:
  Version bump. Fixes bug #269084

  07 Jan 2009; Brent Baude <ranger@gentoo.org> junit-4.5.ebuild:
  Marking junit-4.5 ppc64 for bug 252819

  04 Jan 2009; Markus Meier <maekke@gentoo.org> junit-4.5.ebuild:
  amd64/x86 stable, bug #252819

  03 Jan 2009; nixnut <nixnut@gentoo.org> junit-4.5.ebuild:
  ppc stable #252819

  24 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> junit-4.5.ebuild:
  Fixed installation of sources, bug #243426

*junit-4.5 (22 Oct 2008)

  22 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> +junit-4.5.ebuild:
  Version bump

  23 May 2008; Kenneth Prugh <ken69267@gentoo.org> junit-3.8.2-r1.ebuild:
  amd64 stable, bug #217448

  06 May 2008; Christian Faulhammer <opfer@gentoo.org>
  junit-3.8.2-r1.ebuild:
  stable x86, bug 217448

  29 Apr 2008; Brent Baude <ranger@gentoo.org> junit-3.8.2-r1.ebuild:
  stable ppc, bug 217448

  14 Apr 2008; Markus Rothe <corsair@gentoo.org> junit-3.8.2-r1.ebuild:
  Stable on ppc64; bug #217448

  08 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org> junit-4.4-r1.ebuild:
  Add ~ppc, see bug #129773.

  16 Jan 2008; Vlastimil Babka <caster@gentoo.org> junit-3.8.2-r1.ebuild: